# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added a new brute library that provides a basic framework and logic
  for password guessing scripts. [Patrik]

o [NSE] Renamed db2-info and db2-brute scripts to drda-*. Updated script
  and library to reflect name change. Added support other DRDA based
  databases such as IBM Informix Dynamic Server and Apache Derby.
  [Patrik]

o [Nsock] Added a new function, nsi_set_hostname, to set the intended
  hostname of the target. This allows the use of Server Name
  Indication in SSL connections. This was suggested by Nuno Goncalves.
  [David]

o [NSE] Added default limits on the number of ports that qscan will
  scan. By default, it will do upt o 8 open ports and up to 1 closed
  port. These limits can be controlled with the qscan.numopen and
  qscan.numclosed script arguments. [David]

o [NSE] Made sslv2.nse give special output when SSLv2 is supported,
  but no SSLv2 ciphers are offered. This happened with a specific
  Sendmail configuration. [Matt Selsky]

o [NSE] Added a "times" table to the host table passed to scripts.
  This table contains Nmap's timing data (srtt, the smoothed round
  trip time; rttvar, the rtt variance; and timeout), all represented
  as floating-point seconds.  The ipidseq and qscan scripts were
  updated to utilize the host's timeout value instead of the very
  conservative guess of 3 seconds for read timeouts. [Kris]

o [Nmap, Nping] Fixed the fragmentation options (-f in Nmap, --mtu in
  both) which broke in 5.35DC1. Instead of sending multiple fragments,
  the original packet was sent whole. In some circumstances, sending
  would fail on interfaces with low MTUs (such as SLIP lines) with no
  way to bump down packet sizes for transport. [Kris]

o [NSE] The http library's request functions now accept an additional
  "auth" table within the option table, which if provided causes Basic
  authentication credentials to be sent. [David]
